# occ4d-flow

./: .gitignore  Dockerfile  README.md  pyproject.toml
config/: __init__.py  default.py  nuscenes.py
scripts/: evaluate.py  train.py  visualize.py
src/: __init__.py  model.py
src/data/: __init__.py  nuscenes_occ.py  semantickitti_occ.py  voxel_utils.py
src/decoder/: __init__.py  discriminative_decoder.py  ensemble_blender.py
src/encoder/: __init__.py  fpn.py  pillar_encoder.py  voxel_lifter.py
src/flow_matching/: __init__.py  anisotropic_tv.py  flow_matching_head.py  scheduler.py  unet3d.py
src/losses/: __init__.py  occupancy_losses.py  physics_losses.py  temporal_losses.py  uncertainty_losses.py
src/propagator/: __init__.py  ego_warper.py  future_propagator.py
src/temporal/: __init__.py  confidence_gate.py  conv_gru.py  temporal_aggregator.py  timestamp_embedding.py
tests/: test_encoder.py  test_flow_matching.py
