[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "occ4d-flow"
version = "0.1.0"
description = "4D occupancy forecasting with continuous-time flow matching"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1",
    "torchvision>=0.16",
    "numpy>=1.24",
    "scipy>=1.11",
    "open3d>=0.17",
    "nuscenes-devkit>=1.1",
    "einops>=0.7",
    "wandb>=0.16",
    "tqdm>=4.66",
    "PyYAML>=6.0",
    "matplotlib>=3.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "black>=23.0",
    "isort>=5.12",
    "mypy>=1.5",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "config*"]

[tool.black]
line-length = 100
target-version = ["py310", "py311"]

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
